# DistanceCalculation

./: .gitignore  CMakeLists.txt  Camera.h  CmakePresets.json  Common.h  GJK.h  Matrix.h  OBB.h  Point.h  RectRect.h  SAT.h  Sample.h  Vector.h  obb_display.cpp
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  rectrect
